--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@actions/glob": "^0.3.0",
-    "@vercel/ncc": "^0.36.0"
+    "@vercel/ncc": "^0.36.0",
+    "yaml": "^2.2.1"
   }
 }
