--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "Alex Rodionov <p0deje@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@actions/cache": "https://github.com/p0deje/toolkit/raw/730a2921638a36a31bb6bef6a70f34bff2c99aff/packages/cache/actions-cache-3.1.2.tgz",
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@actions/glob": "^0.3.0",
+    "@actions/cache": "^3.2.2",
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@actions/glob": "^0.4.0",
     "@vercel/ncc": "^0.36.0",
     "yaml": "^2.2.1"
   }
