--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@actions/glob": "^0.4.0",
+    "@actions/tool-cache": "^2.0.1",
     "@vercel/ncc": "^0.36.0",
     "yaml": "^2.2.1"
   }
