add examples CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,13 @@ jobs:
           - ubuntu
           - windows
     steps:
+    - uses: actions/checkout@v4
+      with:
+        repository: bazelbuild/examples
+        path: examples
       - uses: actions/checkout@v4
       - uses: ./
+      - run: bazel build ...
+        working-directory: examples/java-tutorial
       - if: failure() && runner.debug == '1'
         uses: mxschmitt/action-tmate@v3
