--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./
+      - run: ps aux
       - uses: actions/checkout@v4
         with:
           repository: bazelbuild/examples
