--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./
+        with:
+          remote-cache: true
       - uses: actions/checkout@v4
         with:
           repository: bazelbuild/examples
