*: replace the bazelisk, disk and repo cache with sticky disks
This change teaches restoreCache to get and mount a unique stickydisk
per key and mount it at the provided path. We require a stickydisk per
path and so we hash the path and add it to the user configured "cache key".
All other semantics around versioning of the cache and respecting the base
cache key remain the same.

On post, we teach the action to unmount and commit the relevant stickydisks.
For the moment we leave the "external" cache alone. In a follow-up we can move
that to be backed by stickydisks too.

The stickydisk.js file is heavily inspired by the useblacksmith/stickydisk
implementation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,21 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - uses: bufbuild/buf-setup-action@v1
+      - run: |
+          npm config set @buf:registry https://buf.build/gen/npm/v1/
+          npm config set //buf.build/gen/npm/v1/:_authToken ${{ secrets.BUF_TOKEN }}
+          npm install @buf/blacksmith_vm-agent.connectrpc_es@latest
+      - run: npm ci
+      - run: npm test
+
   setup-bazel:
     runs-on: ${{ matrix.os }}-latest
     strategy:
