--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "ncc build index.js -s -o dist/main && ncc build post.js -s -o dist/post",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build index.js -s -o dist/main && ncc build post.js -s -o dist/post && ncc build stickydisk.js -s -o dist/stickydisk",
+    "test": "jest"
   },
   "author": "Alex Rodionov <p0deje@gmail.com>",
   "license": "MIT",
@@ -18,7 +18,13 @@
     "@actions/github": "^6.0.0",
     "@actions/glob": "^0.5.0",
     "@actions/tool-cache": "^2.0.1",
+    "@buf/blacksmith_vm-agent.connectrpc_es": "^1.6.1-20241213043610-906584953dd9.2",
+    "@connectrpc/connect": "^1.6.1",
+    "@connectrpc/connect-node": "^1.6.1",
     "@vercel/ncc": "^0.38.0",
     "yaml": "^2.2.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
