Add disk-cache-files input to support multiple modules
Fixes #67

Add support for overriding disk cache files for multiple modules in the repository.

* Add a new input `disk-cache-files` in `action.yml` to specify custom disk cache files.
* Update `config.js` to handle the new `disk-cache-files` input and override the `diskCache.files` array if provided.
* Update the documentation in `README.md` to include the new `disk-cache-files` input and provide examples of its usage.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/bazel-contrib/setup-bazel/issues/67?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
     description: Cache actions outputs based on BUILD
     required: false
     default: "false"
+  disk-cache-files:
+    description: Custom disk cache files
+    required: false
+    default: ""
   external-cache:
     description: Cache external 10MB+ repositories based on MODULE.bazel/WORKSPACE
     required: false
