--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ inputs:
     description: Cache actions outputs based on BUILD
     required: false
     default: "false"
-  max-disk-cache-size:
+  disk-cache-max-size:
     description: Maximum disk cache size, in GB
     required: false
     default: 5
@@ -49,7 +49,7 @@ inputs:
     description: Cache repositories based on MODULE.bazel/WORKSPACE
     required: false
     default: "false"
-  max-repository-cache-size:
+  repository-cache-max-size:
     description: Maximum repository cache size, in GB
     required: false
     default: 1
