add filesystem usage tracking to sticky disk commits
This PR adds filesystem-level disk usage tracking to sticky disk commits,
enabling the storage agent to make smarter volume sizing decisions. When a
sticky disk is committed, the actual filesystem usage (from df) is now sent
to the VM agent alongside the commit request.

Changes:
- Updated proto dependency to latest @buf/blacksmith_vm-agent with fs_disk_usage_bytes support
- Modified commitStickydisk() to accept fsDiskUsageBytes parameter (defaults to null)
- Added filesystem usage collection using df before commit in unmountAndCommitStickyDisk
- Only include fsDiskUsageBytes in request when valid data is available (> 0)
- Rebuilt dist/ files with latest changes

This enables the storage agent to size new volumes as fs_usage + 600GB
guaranteed writable space instead of using fixed sizes.

Related PRs:
- Depends on: https://github.com/useblacksmith/storage-agent/pull/350 (merged)
- Depends on: https://github.com/FastActions/fa/pull/2350 (VM agent plumbing)
- Related: https://github.com/useblacksmith/setup-docker-builder/pull/35
- Related: https://github.com/useblacksmith/stickydisk/pull/30

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@actions/github": "^6.0.0",
     "@actions/glob": "^0.5.0",
     "@actions/tool-cache": "^2.0.1",
-    "@buf/blacksmith_vm-agent.connectrpc_es": "^1.6.1-20250304023716-e8d233d92eac.2",
+    "@buf/blacksmith_vm-agent.bufbuild_es": "1.5.0-20251002224722-c44b45f26c5e.2",
+    "@buf/blacksmith_vm-agent.connectrpc_es": "^1.6.1-20251002224722-c44b45f26c5e.2",
     "@connectrpc/connect": "^1.6.1",
     "@connectrpc/connect-node": "^1.6.1",
     "@vercel/ncc": "^0.38.0",
