ci: enforce checking in generated dist files
adds a check that fails the CI workflow if npm run build produces any
uncommitted changes in dist/. this ensures developers run 'npm run build'
and commit the generated files before submitting PRs.

the check runs after tests and before the setup-bazel integration test,
showing clear error messages and diffs when dist/ needs to be committed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,16 @@ jobs:
           npm install @buf/blacksmith_vm-agent.connectrpc_es@latest
       - run: npm ci
       - run: npm test
+      - name: Build Action
+        run: npm run build
+      - name: Check for uncommitted build changes
+        run: |
+          if ! git diff --quiet dist/; then
+            echo "Error: Build generated changes in dist/. Please run 'npm run build' locally and commit the changes."
+            git status dist/
+            git diff dist/
+            exit 1
+          fi
 
   setup-bazel:
     runs-on: ${{ matrix.os }}-latest
