--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
       - uses: bufbuild/buf-setup-action@v1
       - run: |
           npm config set @buf:registry https://buf.build/gen/npm/v1/
           npm config set //buf.build/gen/npm/v1/:_authToken ${{ secrets.BUF_TOKEN }}
-          npm install @buf/blacksmith_vm-agent.connectrpc_es@latest
       - run: npm ci
       - run: npm test
       - name: Build Action
